urgent overlapping issue fixed

--- a/src/views/Nft/Create/style.module.scss
+++ b/src/views/Nft/Create/style.module.scss
@@ -312,6 +312,7 @@
 }
 
 .DraftEditorRoot {
+  z-index: 0;
   box-sizing: border-box;
   width: 650px;
   height: 185px;
